add define to keep old skia behavior

review.skia.org/129243 changes some layout
test results in a minor way;
add define to keep old skia behavior
on the way to rebaselining the tests

R=fmalita@chromium.org

Bug: 843966
Change-Id: If09ad8e97c02dab56934ec387ab4a4911bd24b29
Reviewed-on: https://chromium-review.googlesource.com/c/1361632
Reviewed-by: Florin Malita <fmalita@chromium.org>
Commit-Queue: Florin Malita <fmalita@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613719}
Former-commit-id: 3f6c4d675879dde4e5bf9a8a641a70a7765b3a3e